some z-indexes fixed. Product card, add to basket button, minicart backdrop

--- a/src/_components/Header/FunctionalHeader/FunctionalHeader.css
+++ b/src/_components/Header/FunctionalHeader/FunctionalHeader.css
@@ -46,7 +46,7 @@
   animation: 500ms ease-in-out 0s normal none 1 running fadeInDown;
   padding-top: 0px;
   padding-bottom: 0px;
-  animation: 0.5s fadeIn;
+  animation: 0.2s fadeIn;
 }
 
 @keyframes pop {
